--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,3 +1,10 @@
+.container {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .titleContainer {
   display: grid;
   place-items: center;
