--- a/styles/allProducts.module.css
+++ b/styles/allProducts.module.css
@@ -8,4 +8,10 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 10px;
+  min-height: 700px;
+}
+
+.noFavourites {
+  font-weight: 600;
+  margin-top: 3em;
 }
