--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -61,7 +61,98 @@
 }
 
 .accordianInfo {
-  height: 200px;
+  height: fit-content;
   width: 100%;
-  padding: 20px 0px;
+  padding: 5px 10px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.footerRight {
+  display: none;
+}
+
+.linksSection {
+  display: none;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 12px;
+}
+
+.link {
+  font-weight: 400;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2em;
+  height: 2em;
+  border: 2px solid white;
+  border-radius: 50%;
+}
+
+.paymentsContainer {
+  margin-top: 4em;
+}
+
+.paymentsLinks {
+  display: flex;
+  gap: 8px;
+  margin-top: 1em;
+}
+
+.copyRights {
+  text-align: center;
+  margin-top: 1em;
+}
+
+.arrow {
+  font-size: 24px;
+}
+
+@media only screen and (min-width: 725px) {
+  .footerContainer {
+    padding: 5% 8%;
+    padding-bottom: 2em;
+  }
+
+  .newsLetter {
+    margin-top: 3rem;
+  }
+  .footerSection {
+    display: flex;
+    gap: 15rem;
+  }
+  .footerSection2 {
+    display: none;
+  }
+  .footerLeft {
+    width: 40%;
+  }
+
+  .footerRight {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .paymentsContainer2 {
+    margin-top: 1em;
+    display: none;
+  }
+
+  .linksSection {
+    display: flex;
+    gap: 14vw;
+  }
+  .copyRights {
+    margin-top: 2em;
+  }
 }
