--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -7,10 +7,11 @@
   width: 168px;
   padding: 1px;
   display: flex;
-  /* align-items: center; */
+  align-items: center;
   margin-bottom: 10px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; */
 }
 
 .productTitle {
