--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -9,9 +9,6 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-
-  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; */
 }
 
 .productTitle {
@@ -32,3 +29,13 @@
 .signIn {
   text-decoration: underline;
 }
+
+/* @media only screen and (min-width: 1024px) {
+  .imageContainer {
+    height: 399px;
+    max-width: 300px;
+    position: relative;
+    width: 100%;
+    aspect-ratio: 3/4;
+  }
+} */
