--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -22,6 +22,13 @@
   padding: '14px 24px';
   display: block;
   width: full;
+  font-size: 1em;
+  box-sizing: border-box;
+  padding-left: 20px;
+}
+
+.inputBox:focus {
+  outline: none;
 }
 
 .button {
@@ -117,7 +124,12 @@
   font-size: 24px;
 }
 
-@media only screen and (min-width: 725px) {
+.currency {
+  display: flex;
+  align-items: center;
+}
+
+@media only screen and (min-width: 1024px) {
   .footerContainer {
     padding: 5% 8%;
     padding-bottom: 2em;
@@ -153,6 +165,6 @@
     gap: 14vw;
   }
   .copyRights {
-    margin-top: 2em;
+    margin-top: 3em;
   }
 }
