--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -28,7 +28,7 @@
   display: none;
 }
 
-@media only screen and (min-width: 725px) {
+@media only screen and (min-width: 1024px) {
   .filtersContainer {
     display: none;
   }
@@ -50,5 +50,9 @@
   }
   .mainHeading {
     font-size: 3em;
+  }
+
+  .mainText {
+    max-width: 40%;
   }
 }
