--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -13,20 +13,52 @@
   gap: 12px;
   font-size: 28px;
   padding-top: 5px;
+  width: 33%;
 }
 
 .logoContainer {
   width: 24px;
-  height: 24px;
+  max-height: 14px;
+  height: 80%;
+  margin-bottom: 22px;
+}
+.recommend {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
 }
 
-@media only screen and (min-width: 725px) {
+.logoText {
+  text-align: center;
+  min-width: 33%;
+}
+
+.desktopOptions {
+  display: none;
+}
+
+@media only screen and (min-width: 1024px) {
   .navbarContainer {
-    padding: 2%;
     border-bottom: none;
+    padding: 2% 0%;
+    width: 90%;
+    margin: 20px auto;
   }
 
   .hamburger {
-    opacity: 0;
+    display: none;
+  }
+
+  .desktopOptions {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .navChild {
+    gap: 1em;
   }
 }
