--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -24,7 +24,7 @@
   width: full;
   font-size: 1em;
   box-sizing: border-box;
-  padding-left: 20px;
+  padding-left: 12px;
 }
 
 .inputBox:focus {
@@ -133,6 +133,10 @@
   .footerContainer {
     padding: 5% 8%;
     padding-bottom: 2em;
+  }
+
+  .inputBox {
+    padding-left: 12px;
   }
 
   .newsLetter {
