--- a/styles/filters.module.css
+++ b/styles/filters.module.css
@@ -64,14 +64,15 @@
 .recommendPopup {
   position: absolute;
   top: 3rem;
-  min-width: 260px;
-  padding: 2rem 0rem;
-  padding-right: 2rem;
+  left: 1rem;
+  min-width: fit-content;
+  padding: 1rem 0rem;
+  padding-right: 1rem;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   background-color: white;
   text-transform: uppercase;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   text-align: right;
   display: flex;
   flex-direction: column;
@@ -124,5 +125,12 @@
     justify-content: space-between;
     width: 90%;
     margin: 0 auto;
+  }
+
+  .recommendPopup {
+    min-width: 260px;
+    padding: 2rem 0rem;
+    padding-right: 2rem;
+    left: -1rem;
   }
 }
